<resources>
    <string name="app_name">entrance</string>

    <string name="registered">注册</string>
    <string name="login">登陆</string>
    <string name="title">老年人的智能陪护伙伴</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="account">账号</string>
    <string name="password">密码</string>

    <string name="older">老人</string>
    <string name="children">子女</string>
    <string name="escort">陪护</string>

    <string name="register_answer">请问您是？</string>
    <string name="next">下一步</string>
</resources>
