<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/loginback"
        tools:context=".login.view.LoginActivity">

    <FrameLayout
            android:id="@+id/register_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:padding="10dp"
                android:text="@string/registered"
                android:textSize="18sp"
                android:textColor="#9296ff"
                tools:ignore="RtlHardcoded"/>

    </FrameLayout>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_below="@+id/register_back"
            android:layout_marginTop="20dp"
            android:src="@drawable/loginlogo"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:padding="10dp"
            android:layout_marginTop="50dp">

        <include
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/logintext"/>

        <TextView
                android:id="@+id/main_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout"
                android:layout_marginTop="45dp"
                android:background="@drawable/text_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="10dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

        <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_login"
                android:text="@string/forgot_password"
                android:textSize="17dp"
                android:textColor="#fff"
                android:layout_centerInParent="true"
                android:layout_marginTop="25dp"/>

    </RelativeLayout>


</RelativeLayout>